@@ -32,7 +32,7 @@
           $code_table(frame)
           $var_table(frame['vars'])
           <% if evalex %>
-            <form class="exec_code">
+            <form class="exec_code" action="">
               <pre class="output">[console ready]</pre>
               <input type="hidden" name="tb" value="$tb_uid">
               <input type="hidden" name="frame" value="$frame['frame_uid']">
